# sphinx-test

./: CMakeLists.txt  README.md
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/_modules/mypackage/: _test.html
src/ffi/: ffi_test.f90  ffi_test.h
src/python/: CMakeLists.txt
src/python/mypackage/: __init__.py  _findlib.py  _test.py
src/sphinx/: CMakeLists.txt  conf.py  index.rst
